[package]
name = "gps-util"
version = "0.1.0"
authors = ["Bartłomiej Kamiński <fizyk20@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2"
serialport = "4.0"
glium = "0.30"
glium_text = { git = "https://github.com/fizyk20/glium_text", branch = "master" }
nalgebra = "0.28"
